--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/SearchResult/_ResultTemplate.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/SearchResult/_ResultTemplate.cshtml
@@ -39,7 +39,7 @@
             <div class="c-cardTable__content"><%= ExchangeCode.Text %></div>
         </td>
         @*【市價(日期)】=> 市價績效,市價風險,交易狀況,基本資料*@
-        <td class="c-cardTable__body" data-card-table-width="1/2" data-table-name="marketPriceTable,marketRiskTable,netWorthRiskTable,tradeTable,baseTable">
+        <td class="c-cardTable__body" data-card-table-width="1/2" data-table-name="marketPriceTable,marketRiskTable,tradeTable,baseTable">
             <!-- [data-length]: 設定轉換成卡片時，標題的寬度，單位為字數em，範圍1~5字 -->
             <div class="c-cardTable__title" data-length="4">市價<br>(日期)</div>
             <div class="c-cardTable__content"><%= MarketPrice.Text %><br><span class="t-date"><%= NetAssetValueDate.Text %></span></div>
