--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/_EtfSearchResult.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/_EtfSearchResult.cshtml
@@ -359,7 +359,7 @@
                             </div>
                         </th>
                         @*【市價(日期)】=> 市價績效,市價風險,交易狀況,基本資料*@
-                        <th data-table-name="marketPriceTable,marketRiskTable,netWorthRiskTable,tradeTable,baseTable">
+                        <th data-table-name="marketPriceTable,marketRiskTable,tradeTable,baseTable">
                             <div class="c-table__title">
                                 <span>市價<br>(日期)</span>
                                 <a href="#" class="o-sorting" data-sorting-column="MarketPrice.Value"></a>
