--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/JoinMemberInfo/JoinMemberInfo.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/JoinMemberInfo/JoinMemberInfo.cshtml
@@ -21,7 +21,7 @@
                                 <h3 class="c-feature__title">@Html.Sitecore().Field(Template.JoinMemberInfo.Fields.Title1.ToString(), Model.Item)</h3>
                                 <p class="c-feature__desc">@Html.Sitecore().Field(Template.JoinMemberInfo.Fields.Description1.ToString(), Model.Item)</p>
                             </hgroup>
-                            <img src=@Model.Image1 srcset=@Model.Image1_3X alt="個人化商品推薦" class="c-feature__img">
+                            <img src=@Model.Image1 alt="個人化商品推薦" class="c-feature__img">
                         </div>
                     </li>
                     <li class="l-feature__item">
@@ -30,7 +30,7 @@
                                 <h3 class="c-feature__title">@Html.Sitecore().Field(Template.JoinMemberInfo.Fields.Title2.ToString(), Model.Item)</h3>
                                 <p class="c-feature__desc">@Html.Sitecore().Field(Template.JoinMemberInfo.Fields.Description2.ToString(), Model.Item)</p>
                             </hgroup>
-                            <img src=@Model.Image2 srcset=@Model.Image2_3X alt="觀察清單" class="c-feature__img">
+                            <img src=@Model.Image2 alt="觀察清單" class="c-feature__img">
                         </div>
                     </li>
                     <li class="l-feature__item">
@@ -39,7 +39,7 @@
                                 <h3 class="c-feature__title">@Html.Sitecore().Field(Template.JoinMemberInfo.Fields.Title3.ToString(), Model.Item)</h3>
                                 <p class="c-feature__desc">@Html.Sitecore().Field(Template.JoinMemberInfo.Fields.Description3.ToString(), Model.Item)</p>
                             </hgroup>
-                            <img src=@Model.Image3 srcset=@Model.Image3_3X alt="遠距理財服務" class="c-feature__img">
+                            <img src=@Model.Image3 alt="遠距理財服務" class="c-feature__img">
                         </div>
                     </li>
                 </ul>
