--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/HighRatedFund/HighRatedFundReturnView.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/HighRatedFund/HighRatedFundReturnView.cshtml
@@ -30,7 +30,7 @@
             <td class="c-cardTable__space"></td>
             <td class="c-cardTable__body" data-card-table-width="1/2">
                 <div class="c-cardTable__title" data-length="5">最新淨值<br>(淨值日)</div>
-                <div class="c-cardTable__content">@item.NetAssetValue<br><span class="t-date">@item.NetAssetValueDate.ToString("yyyy/MM/dd")</span></div>
+                <div class="c-cardTable__content">@item.NetAssetValue<br><span class="t-date">@item.NetAssetValueDateFormat</span></div>
             </td>
             <td class="c-cardTable__body" data-card-table-width="1/2">
                 <div class="c-cardTable__title" data-length="5">
